--- a/configs/torch/segmentation.ini
+++ b/configs/torch/segmentation.ini
@@ -5,9 +5,9 @@ train_resolution = 240
 test_batch_size = 128
 test_interval = 1
 validation_split = 10 
-epochs = 50
-lr = 1e-4
-end_lr = 1e-6
+epochs = 500
+lr = 1e-3
+end_lr = 1e-4
 restarts = 1
 beta1 = 0.9
 beta2 = 0.999
@@ -18,7 +18,7 @@ seed = 1
 log_interval = 10
 differentially_private = no
 optimizer = Adam
-model = monet_seg_net
+model = unet
 ;not used
 pretrained = no 
 weight_classes = no
