--- a/configs/torch/segmentation.ini
+++ b/configs/torch/segmentation.ini
@@ -5,7 +5,7 @@ train_resolution = 240
 test_batch_size = 128
 test_interval = 1
 validation_split = 10 
-epochs = 500
+epochs = 100
 lr = 1e-3
 end_lr = 1e-4
 restarts = 1
@@ -18,7 +18,7 @@ seed = 1
 log_interval = 10
 differentially_private = no
 optimizer = Adam
-model = unet
+model = monet_seg_net
 ;not used
 pretrained = no 
 weight_classes = no
