--- a/configs/torch/segmentation.ini
+++ b/configs/torch/segmentation.ini
@@ -19,7 +19,7 @@ seed = 1
 log_interval = 10
 differentially_private = no
 optimizer = Adam
-model = MoNet
+model = unet
 ;not used
 pretrained = yes
 weight_classes = no
