--- a/configs/torch/segmentation.ini
+++ b/configs/torch/segmentation.ini
@@ -6,7 +6,7 @@ inference_resolution = 256
 test_batch_size = 128
 test_interval = 1
 validation_split = 10 
-epochs = 50
+epochs = 3
 lr = 1e-3
 end_lr = 1e-4
 restarts = 1
@@ -19,7 +19,7 @@ seed = 1
 log_interval = 10
 differentially_private = no
 optimizer = Adam
-model = unet
+model = MoNet
 ;not used
 pretrained = yes
 weight_classes = no
@@ -60,7 +60,7 @@ grid_dropout = no
 
 ;not used
 [federated] 
-sync_every_n_batch = 40
+sync_every_n_batch = 20
 wait_interval = 0.1
 keep_optim_dict = no
 weighted_averaging = no
